Refactoring Content Definitions

--- a/src/OrchardCore.Modules/AffairesExtra.Migration/Views/Admin/Index.cshtml
+++ b/src/OrchardCore.Modules/AffairesExtra.Migration/Views/Admin/Index.cshtml
@@ -10,12 +10,24 @@
     <input type="submit" value="Import Brands" />
 </form>
 <br />
-<form asp-action="ImportFarmMachinery" method="post" enctype="multipart/form-data">
-    <input type="submit" value="Import Farm Machinery" />
+<form asp-action="ImportRealEstate" method="post" enctype="multipart/form-data">
+    <input type="submit" value="Import Real Estate" />
 </form>
 <br />
-<form asp-action="ImportFarmMachineryAccessory" method="post" enctype="multipart/form-data">
-    <input type="submit" value="Import Farm Machinery Accessory" />
+<form asp-action="ImportClassifiedAd" method="post" enctype="multipart/form-data">
+    <input type="submit" value="Import Classified Ads" />
+</form>
+<br />
+<form asp-action="ImportService" method="post" enctype="multipart/form-data">
+    <input type="submit" value="Import Services" />
+</form>
+<br />
+<form asp-action="ImportMotorEquipment" method="post" enctype="multipart/form-data">
+    <input type="submit" value="Import Motor Equipment" />
+</form>
+<br />
+<form asp-action="ImportAccessoryEquipment" method="post" enctype="multipart/form-data">
+    <input type="submit" value="Import Accessory Equipment" />
 </form>
 <br />
 <form asp-action="CleanOtherEquipment" method="post" enctype="multipart/form-data">
@@ -45,17 +57,5 @@
 <form asp-action="ImportOtherEquipement" method="post" enctype="multipart/form-data">
     <input type="submit" value="Import Other Equipment 6" />
     <input type="hidden" value="6" name="id" />
-</form>
-<br />
-<form asp-action="ImportRealEstate" method="post" enctype="multipart/form-data">
-    <input type="submit" value="Import Real Estate" />
-</form>
-<br />
-<form asp-action="ImportClassifiedAd" method="post" enctype="multipart/form-data">
-    <input type="submit" value="Import Classified Ads" />
-</form>
-<br />
-<form asp-action="ImportService" method="post" enctype="multipart/form-data">
-    <input type="submit" value="Import Services" />
 </form>
 <br />
