Some work for rotating images from image gallery

--- a/src/OrchardCore.Modules/OrchardCore.Media/Views/Admin/MediaApplication.cshtml
+++ b/src/OrchardCore.Modules/OrchardCore.Media/Views/Admin/MediaApplication.cshtml
@@ -116,6 +116,7 @@
 <input type="hidden" id="renameMediaUrl" value="@Url.Action("MoveMedia", "Admin", new { area = "OrchardCore.Media" })" />
 <input type="hidden" id="deleteMediaListUrl" value="@Url.Action("DeleteMediaList", "Admin", new { area = "OrchardCore.Media" })" />
 <input type="hidden" id="moveMediaListUrl" value="@Url.Action("MoveMediaList", "Admin", new { area = "OrchardCore.Media" })" />
+<input type="hidden" id="rotateImageUrl" value="@Url.Action("RotateImage", "Admin", new { area = "OrchardCore.Media" })" />
 <input type="hidden" id="uploadFiles" value="@Url.Action("Upload", "Admin", new { area = "OrchardCore.Media" })" />
 
 @*Localizable Strings shared*@
